figma-kit/src/components/slider/slider.css
:root,
.light,
.light-theme {
  --slider-root-size: var(--space-6);
  --slider-track-size: var(--space-4);
  --slider-thumb-width: var(--space-4);
  --color-border-slider-track: #0000001a;
}

.dark,
.dark-theme {
  --color-border-slider-track: #ffffff1a;
}

.fp-SliderRoot {
  position: relative;
  display: flex;
  align-items: center;
  flex-grow: 1;
  outline: 0;
  border-color: transparent;
  border-style: solid;

  &[data-orientation='horizontal'] {
    height: var(--slider-root-size);
    border-width: 0 calc(var(--slider-thumb-width) / 2);
  }

  &[data-orientation='vertical'] {
    flex-direction: column;
    width: var(--slider-root-size);
    border-width: calc(var(--slider-thumb-width) / 2) 0;
  }
}

.fp-SliderTrack {
  box-sizing: border-box;
  position: relative;
  overflow: hidden;
  flex-grow: 1;
  background-color: var(--figma-color-bg-secondary);
  border-radius: var(--radius-full);
  outline: 1px solid var(--color-border-slider-track);
  outline-offset: -1px;

  &[data-orientation='horizontal'] {
    margin-left: calc((var(--slider-thumb-width) / 2) * -1);
    margin-right: calc((var(--slider-thumb-width) / 2) * -1);
    height: var(--slider-track-size);
  }

  &[data-orientation='vertical'] {
    margin-top: calc((var(--slider-thumb-width) / 2) * -1);
    margin-bottom: calc((var(--slider-thumb-width) / 2) * -1);
    width: var(--slider-track-size);
  }
}

.fp-SliderRange {
  position: absolute;
  display: block;
  background-color: var(--figma-color-bg-brand);
  border-radius: var(--radius-full);

  &[data-orientation='horizontal'] {
    height: var(--slider-track-size);
    margin-left: calc((var(--slider-thumb-width) / 2) * -1);
    margin-right: calc((var(--slider-thumb-width) / 2) * -1);
  }

  &[data-orientation='vertical'] {
    width: var(--slider-track-size);
    margin-top: calc((var(--slider-thumb-width) / 2) * -1);
    margin-bottom: calc((var(--slider-thumb-width) / 2) * -1);
  }

  &[data-disabled] {
    background-color: var(--figma-color-bg-disabled);
  }
}

.fp-SliderThumb {
  box-sizing: border-box;
  display: block;
  width: var(--slider-track-size);
  height: var(--slider-track-size);
  background-color: var(--figma-color-icon-onbrand);
  border: 4px solid var(--figma-color-icon-onbrand);
  border-radius: var(--radius-full);
  box-shadow: var(--elevation-200);
  outline: 0;

  &[data-disabled] {
    background-color: var(--figma-color-bg-disabled-secondary);
    border: 0;
    box-shadow: none;
  }

  &.fp-SliderThumb-focusVisible:focus-visible {
    outline: 1px solid var(--figma-color-border-selected);
  }

  &.fp-SliderThumb-modified {
    background-color: transparent;
  }
}

.fp-SliderHint {
  position: absolute;
  display: block;
  width: var(--space-1);
  height: var(--space-1);
  background-color: var(--figma-color-icon-tertiary);
  border-radius: var(--radius-full);

  &[data-orientation='horizontal'] {
    top: 50%;
    transform: translateY(-50%);
  }

  &[data-orientation='vertical'] {
    left: 50%;
    transform: translateX(-50%);
  }

  &.fp-SliderHint-baseValue {
    background-color: var(--figma-color-icon);
  }
}

